# project50k-backend

./: .env  .gitignore  alembic.ini  main.py  package-lock.json  pyproject.toml
alembic/versions/: 1dd6e53a9cce_add_user_goal_table.py  20d00cea7242_initial_migration_mysql.py
app/: main.py
app/api/: router.py
app/api/v1/: __init__.py  auth.py  finance.py  hello.py
app/services/ai/: __init__.py  agent.py
app/services/auth/: service.py  utils.py
app/services/database/models/: __init__.py
app/services/database/models/finance/: __init__.py  model.py
app/services/database/models/user/: model.py
app/services/settings/: base.py
